# py-freebsd

./: Makefile  README.rst  filelist.slackbox.rsmith  freebsd.py  pyproject.toml
src/: freebsd.py
