[build-system]
requires = ["build", "flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "freebsd"
authors = [
  { name="Roland Smith", email="rsmith@xs4all.nl" },
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dynamic = ["version", "description"]
classifiers = [
   'Development Status :: 5 - Production/Stable',
   'Environment :: Console',
   'Intended Audience :: End Users/Desktop',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Operating System :: POSIX :: BSD :: FreeBSD',
   'Programming Language :: Python :: 3',
   'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Repository = "https://github.com/rsmith-nl/py-freebsd"
